--- a/pokedex.html
+++ b/pokedex.html
@@ -9,6 +9,10 @@
     <textarea id="pokemon-input"></textarea>
     <button id='search'>Search pokedex files</button>
 
+    <h2 id="pokemon-name"></h2>
+    <div id="sprite-area">
+        
+    </div>
 
     <script src="getPokemon.js"></script>
 </body>
